# stalnov-legacy

./: .gitignore  Makefile  heroku.yml  pyproject.toml
.devcontainer/: database.env  devcontainer.json  docker-compose.yml  web.env
db/: Dockerfile
src/: Makefile  requirements.txt
src/apps/accounts/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
src/apps/main/: admin.py  context_processors.py  decorators.py  exceptions.py  forms.py  managers.py  urls.py  views.py
src/apps/main/migrations/: 0001_initial.py  0002_auto_20210926_1836.py  0003_novel_reads.py  0004_alter_novel_reads.py
src/apps/main/models/: __init__.py  chapter.py  comment.py  genre.py  like.py  novel.py  user.py
src/apps/main/templatetags/: novel_extras.py
src/apps/main/tests/: tests.py
src/apps/main/views/: __init__.py  default.py  novel.py  writer.py
src/apps/novels/: admin.py  apps.py  exceptions.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
src/apps/novels/fixtures/: novels.json
src/apps/novels/templates/novels/: chapter.html  genre.html  (+4 more)
src/apps/novels/templatetags/: novel_extras.py
src/core/: asgi.py  settings.py  urls.py  views.py
src/frontend/templates/: archetype.html
src/frontend/templates/global/: base.html
src/frontend/templates/registration/: login.html
src/scripts/: generate_page.sh
web/: Dockerfile  requirements.txt
web/src/: features.md
web/src/apps/main/: admin.py  context_processors.py  decorators.py  forms.py  urls.py
web/src/core/: settings.py  wsgi.py
web/src/scripts/: dev_entrypoint.sh
(+81 files in other folders)
