[tool.poetry]
name = "stalnov"
version = "0.1.0"
description = ""
authors = ["Rodrigue <brodrigue@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-notifications-hq = "^1.6.0"
Pillow = "^8.3.2"
gunicorn = "^20.1.0"
django-stubs = "^1.9.0"
django-storages = "^1.11.1"
django-richtextfield = "^1.6.1"
psycopg2 = "^2.9.1"
readtime = "^1.1.1"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "django-admin src/manage.py runserver"
